# just-do-test-task

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
client/: Dockerfile  docker-compose.yml  next.config.mjs  package.json
client/app/: layout.tsx  page.tsx
client/app/activation/[uid]/[token]/: page.tsx
client/app/auth/: page.tsx
client/app/auth/google/: page.tsx
client/app/auth/login/: page.tsx
client/app/auth/register/: page.tsx
client/app/dashboard/: layout.tsx  page.tsx
client/components/: Header.tsx  ThemeToggler.tsx
client/components/common/: BaseAuth.tsx  DashBoardCard.tsx  GoogleButton.tsx  Header.tsx  SearchInfo.tsx  Spinner.tsx  ThemeProvider.tsx  ThemeToggler.tsx  index.tsx
client/components/forms/: LoginForm.tsx  RegisterForm.tsx
client/components/ui/: button.tsx  combobox.tsx
client/components/utils/: RequireAuth.tsx  Setup.tsx  index.ts  useVerify.tsx
client/redux/: store.ts
client/redux/features/: authApiSlice.ts  authSlice.ts
client/redux/services/: apiSlice.ts
client/validators/: register.tsx
mailing/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_mailing_author_alter_mailing_recipient.py
notification/: settings.py  urls.py
users/: authentication.py  models.py  views.py
users/migrations/: 0001_initial.py
